# sdl2_vendor

./: 3rd-party-licenses.md  CMakeLists.txt  Config.cmake.in
SDL2/: CMakeLists.txt
SDL2_image/: CMakeLists.txt
SDL2_ttf/: CMakeLists.txt
